--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/png" href="./icon.png">
     <title>重力2048</title>
 </head>
 <body>
@@ -65,7 +66,7 @@
     </div>
 
     <div id="author">
-        Copyright © 2025 Lin Sifan
+        Copyright © 2025 林思帆
     </div>
 </body>
 </html>
